# Economic-Timeseries-Explainable-Financial-Timeseries-via-Convolutional-Gradients

./: README.md  README_interpretation_github.md  README_interpretation_polished.md  cdew_concepts_v2.py  create_synthetic_data.py  environment.yml  metrics_over_time_v2.py  pyproject.toml  requirements.txt
data/: build_timeseries_from_metadata.py
data/raw/: timeseries_data.csv  timeseries_data_real.csv
notebooks/: 03_xai_gradcam.ipynb  05_metrics_cdew.ipynb  multi_asset_eda_template.ipynb
outputs/: cdew_concepts_v2.py  event_warping.py  vix_tcn_revin_xai_plus.py
outputs/cdew/: cav_stability.csv  cdew_config.json  cdew_effects.csv  cdew_ref_fixed.csv  concept_labels_single.csv  concept_thresholds.json  example_pair_detail.csv  tcav_cv_scores.csv
outputs/concepts/: cdew_by_concept.csv  concept_cooccurrence.csv  concept_labels.csv  concept_prevalence.csv  conditional_event_rates.csv  tcav_scores_by_concept.csv  top10_dates_FlightToSafety.csv  top10_dates_LiquiditySqueeze.csv
outputs/experiments/: baseline_metrics.csv  model_capacity.csv  summary_val.csv
outputs/metrics/: dtw_metrics_over_time.csv  metric_auc.csv  metric_config.json  reference_set.csv  retrieval_at_k.csv
outputs/metrics_for_cdew/: alpha_top_p_sensitivity.csv
outputs/posthoc/: analysis_indices.csv  cam_summary_per_sample.csv  deletion_scores.csv  event_definition.csv  matched_pairs.csv  matching_balance.csv  (+2 more)
scripts/: 01_eda.ipynb  02_train_tcn_revin.ipynb  04_posthoc_analysis.ipynb  run_cdew.py  run_experiment.py  run_metrics.py  run_posthoc.py
tests/: test_event_warping.py
(+18 files in other folders)
