[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vix-xai"
version = "0.1.0"
description = "Explainable financial time-series modeling with TCN, Grad-CAM, Event Warping, and C-DEW"
authors = [
  {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.1",
    "scikit-learn==1.4.2",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
    "tqdm==4.66.4",
    "joblib==1.4.2",
    "pyyaml==6.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
