[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vix-xai"
version = "0.1.0"
description = "VIX TCN + XAI + Event-Warping + C-DEW (Concept-DTW)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "torch>=2.0",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "tqdm>=4.64",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
